# hangman

./: README.md
hangman/: .gitignore  CMakeLists.txt  Message.h  Player.cpp  Player.h  server.cpp
hangman/Client/: CMakeLists.txt  build_client.sh  widget.cpp  widget.h  widget.ui
hangman/config/: config.h  words.txt
